force-app/main/default/objects/Internet_Plan_Object__c/Internet_Plan_Object__c.object-meta.xml
<CustomObject>
    <label>Internet Plan</label>
    <nameField>
        <label>Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Internet Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>