force-app/main/default/objects/Internet_Plan_Object__c/fields/Data_Limit__c.field-meta.xml
<CustomField>
    <fullName>Data_Limit__c</fullName>
    <label>Data Limit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>