force-app/main/default/objects/Internet_Plan_Object__c/fields/Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Plan_Type__c</fullName>
    <label>Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fiber</fullName>
            </value>
            <value>
                <fullName>Broadband</fullName>
            </value>
            <value>
                <fullName>Wireless</fullName>
            </value>
            <value>
                <fullName>Prepaid</fullName>
            </value>
            <value>
                <fullName>Postpaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>